Fixing a bug where the lists are not aligned well.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -126,11 +126,6 @@ blockquote:before {
 	top: 30px;
 }
 
-.bk-content-text ul, .bk-content-text ol, .bk-content-text li {
-  padding-left: 1.4em;
-  text-indent: -1.4em;
-}
-
 /* ===============================
    CUSTOM CSS
    =============================== */
